--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     
     <!-- navbar -->
 
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
            <a class="navbar-brand p-4 size" href="#"><b>Advance Edu</b></a>
            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+           <span class="navbar-toggler-icon"></span>
            </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
@@ -93,6 +93,9 @@
     <span class="d-flex justify-content-center">Some representative placeholder content for the third slide.</span>
     <p class="d-flex justify-content-center">Representative placeholder content</p>
     <br><br><br>
+
+    
+
 
 
 
