ready section added

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     <p class="d-flex justify-content-center">Representative placeholder content</p>
     <br><br><br>
 
+                        <!-- Discover our course 2nd part -->
     <section class="container">
         <div class="row gy-4">
             <div class="col-lg-6">
@@ -167,8 +168,70 @@
             <a class="text-decoration-none bg-primary text-white rounded px-3 py-2 course" href=""><b>See more courses</b></a>
         </div>
     </section><br><br><br><br><br>
+
+
     
+                    <!-- Explore the e-learning institute -->
+
+    <section class="container">
+        <div class="row gx-5">
+            <div class="col-lg-6">
+                <img class="img-fluid" src="images/working.png" alt="">
+            </div>
+            <div class="col-lg-6">
+                <div class="margin">
+                    <div>
+                        <h1><strong> Explore the e-learning institute</strong></h1>
+                        <p>
+                        This guide summarizes current research and commentary on e-learning, examining the key issues facing organizations exploring e-learning for employee development. The guide contains six sections. The first section provides an introduction to the issue of e-learning and a summary of the issues discussed in the remainder of the guide.
+                        </p><br>
+                        <p>This guide summarizes current research and commentary on e-learning, examining the key issues facing organizations exploring e-learning for employee development. The guide contains six sections.</p><br>
+                    </div>
+                    <div class="d-flex">
+                        <div class="">
+                            <h1>3.2k+</h1>
+                            <p class="text-muted"><b>Online Courses</b></p>
+                        </div>
+                        <div class="mx-5">
+                            <h1>600+</h1>
+                            <p class="text-muted"><b>Expert Menbers</b></p>
+                        </div>
+                        <div class="">
+                            <h1>1k+</h1>
+                            <p class="text-muted"><b>Rating & Review</b></p>
+                        </div>
+                    </div>
+                    <div class="mt-4">
+                        <a class="text-decoration-none bg-primary text-white rounded px-3 py-2 course" href=""><b>Read More</b></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section><br><br><br><br><br>
+
+
+
+    <!-- Ready to join -->
+    <section class="container">
+        <div class="row bg-primary rounded px-5 py-5">
+            <div class="col-lg-9">
+                <div class="text-white mx-5">
+                    <h1>Ready to join?</h1><br>
+                    <span>He came to a lone broom bush and collapsed in its shade, wanting in the</span><br>
+                    <span>worst way to be done with it all--to just die: "Enough of</span>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="mt-5 mx-4">
+                    <a class="text-decoration-none bg-white text-primary rounded px-3 py-2" href=""><b>Register Now</b></a>
+                </div>
+            </div>
+        </div>
+    </section><br><br><br><br><br>
     
+
+
+
 
 
 
