--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     <section class="container">
         <div class="row">
             <div class="col-lg-6">
-                <div class="feedback border rounded p-4">
+                <div class="border rounded p-4">
                     <img src="images/comma.png" alt=""><br><br>
                     <!-- icon dita hoba -->
                     <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto</span><br>
@@ -333,6 +333,7 @@
     </section><br><br><br><br><br>
 
 
+                                <!-- Accordion -->
     <section class="container">
         <h1 class="d-flex justify-content-center">Frequently Asked Question</h1>
         <span class="d-flex justify-content-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, quisquam.</span>
@@ -344,7 +345,7 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        What is the difference between flexbox and grid ?
+                        <b>What is the difference between flexbox and grid ?</b>
                         </button>
                       </h2>
                       <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -357,7 +358,7 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        What is the difference between Bootstrap vs Tailwind ?
+                        <b>What is the difference between Bootstrap vs Tailwind ?</b>
                         </button>
                       </h2>
                       <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -370,7 +371,7 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        What is CSS Box Model ?
+                        <b>What is CSS Box Model ?</b>
                         </button>
                       </h2>
                       <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
@@ -383,7 +384,7 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingfour">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
-                        What is semantic tag?
+                        <b>What is semantic tag ?</b>
                         </button>
                       </h2>
                       <div id="collapsefour" class="accordion-collapse collapse" aria-labelledby="headingfour" data-bs-parent="#accordionExample">
@@ -395,6 +396,31 @@
             </div>
         </div>
     </section><br><br><br>
+
+
+                                            <!-- Company -->
+    <section>
+        <h1 class="d-flex justify-content-center"><b><i>Trusted over by 800+ Companies</i></b></h1><br>
+        <div class="d-flex justify-content-center">
+            <img class="img-fluid" src="images/company/company-1.png" alt="">
+            <img class="img-fluid mx-5" src="images/company/company-2.png" alt="">
+            <img class="img-fluid" src="images/company/company-3.png" alt="">
+            <img class="img-fluid mx-5" src="images/company/company-4.png" alt="">
+            <img class="img-fluid" src="images/company/company-5.png" alt="">
+            <img class="img-fluid mx-5" src="images/company/company-6.png" alt="">
+        </div>
+    </section><br><br><br><br><br>
+
+    
+                                            <!-- footer -->
+    <footer>
+        <div class="bg-black text-white foot">
+            <h1>Advance Edu</h1><br>
+            <span>Office 41, Zayaya Building, Ghala Muscat</span><br>
+            <span>Sultanate of Oman</span><br>
+            <span>Privacy Policy | Terms of Uses</span>
+        </div>
+    </footer>
     
 
 
