--- a/index.html
+++ b/index.html
@@ -101,10 +101,12 @@
                         <!-- Discover our course 2nd part -->
     <section class="container">
         <div class="row gy-4">
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-sm-12">
                 <div class="d-flex align-items-center border border-2 rounded">
-                    <img src="images/course/course-1.png" alt="">
-                    <span class="text">
+                    <span class="order-sm-1">
+                        <img src="images/course/course-1.png" alt="">
+                    </span>
+                    <span class="text order-sm-2">
                         <h4>Fundamental of UI/UX Design</h4>
                         <span>Some quick example text to build on the card</span>
                         <span>and make up the bulk of the card title</span>
