--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                         <!-- Discover our course 2nd part -->
     <section class="container">
         <div class="row gy-4">
-            <div class="col-lg-6">
-                <div class="d-flex align-items-center border border-2 rounded">
+            <div class="col-lg-6 col-sm-12">
+                <div class="ima d-flex align-items-center border border-2 rounded">
                     <img src="images/course/course-1.png" alt="">
                     <span class="text">
                         <h4>Fundamental of UI/UX Design</h4>
@@ -226,7 +226,7 @@
                 </div>
             </div>
             <div class="col-lg-3">
-                <div>
+                <div class="Register">
                     <!-- Button trigger modal -->
                     <button type="button" class="bg-white text-primary rounded px-4 py-2 border mt-5" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         <b>Register Now</b>
